[package]
name = "cmake-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
duct = "1.1.1"
eyre = "0.6.12"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
tokio-stream = { version = "0.1.17", features = ["full"] }
